2009-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-jaxws-getdtdtype.patch:
	Add additional fix for AttributeBase.java
	
2009-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Use SHA256 checksums for all.
	(download-visualvm.stamp): Use SHA256 checksums.
	(download-cacao.stamp): Likewise.
	(download-jaf-drop.stamp): Likewise.
	(download-jaxws-drop.stamp): Likewise.
	* configure.ac:
	Remove search for MD5SUM tool.
	
2009-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Always compute the checksums of zip files
	even when specified by --with-alt-src-zip.
	Switch the alternate HotSpot build to SHA256
	checksums.
	(hgforest.stamp): Simplified to just if USE_HG.
	(download-openjdk.stamp): Symlink alternate
	zip files and then check, instead of jumping
	the download step altogether.
	(download-cacao.stamp): Likewise.
	* hotspot.map: Remove dead redundant line for
	old original build.

2009-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-jaxws-getdtdtype.patch:
	Fix path.

2009-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Make use of JAXWS dependent on absence of
	javax.annotation.Resource and/or getDTDType()
	bug.  Add new JAXWS patch.
	(extract-jaxws.stamp): Apply getDTDType() patch
	if bug found.
	* acinclude.m4:
	(IT_GETDTDTYPE_CHECK): Check for old versions of
	gcj/Classpath which have
	javax.xml.stream.events.Attribute.getDTDType()
	with a return type of QName not String.
	* configure.ac:
	Invoke new IT_GETDTDTYPE_CHECK macro.
	* patches/icedtea-jaxws-getdtdtype.patch:
	New patch to work around the getDTDType() bug.
	
2009-11-17  Gary Benson  <gbenson@redhat.com>

	* acinclude.m4:
	(ENABLE_ZERO_BUILD): Do not set CORE_BUILD.

	* Makefile.am:
	(ICEDTEA_CORE_BUILD): Do not set.
	(ICEDTEA_ENV): Do not set CORE_BUILD.
	(stamps/ports.stamp): Do not create jvm.cfg or
	ergo_$arch.c for Zero or Shark builds.

	* patches/hotspot/default/icedtea-core-zero-build.patch: